Fixed positioning of timer display on small screen widths

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -22,11 +22,10 @@ h1 {
 
 .app {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   max-width: 400px;
-  display: flex;
   justify-content: center;
+  align-items: center;
   margin: 0 auto;
   border-radius: 10px;
   padding: 20px;
