--- a/src/timer/Timer.scss
+++ b/src/timer/Timer.scss
@@ -1,6 +1,6 @@
 .timer-container {
-  flex-basis: 100%;
   position: relative;
+  // border: 1px solid white;
 }
 
 #timer-label {
@@ -21,17 +21,17 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 200px;
+  width: 100%;
   height: 200px;
 
   position: absolute;
   top: 0;
-  left: 100px;
+  left: 0;
 
   box-sizing: border-box;
 
   // border-radius: 50%;
-  // border: 12px solid white;
+  // border: 1px solid pink;
 }
 
 .progress {
